--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <h1 class="title">Vendor Login</h1>
+    <h1 class="title">Login</h1>
 
     <form method="post" action="">
         {% csrf_token %}
