--- a/templates/mails/verification_email.html
+++ b/templates/mails/verification_email.html
@@ -55,12 +55,14 @@
 <!--        </div>-->
         <div class="content">
             <h1>Email Verification</h1>
-            <p>Thank you for registering with our application. Please use the following verification code to complete your registration:</p>
-            <div class="verification-code">{{ verification_code }}</div>
-            <p>If you did not request this email, please ignore it.</p>
+            <body>
+                <h1>Hello {{ user.email }}</h1>
+                <p>Thank you for registering! To verify your email address, please click the link below:</p>
+                <a href="{{ verification_link }}">Click here to verify your email</a>
+            </body>
         </div>
         <div class="footer">
-            &copy; {{ current_year }} Smart Kitchen Green. All rights reserved.
+            &copy; {{ current_year }} Habba Wa Jumla. All rights reserved.
         </div>
     </div>
 </body>
