--- a/templates/categories/categories.html
+++ b/templates/categories/categories.html
@@ -27,7 +27,7 @@
           {% for category in categories %}
         <div class="flex flex-col items-center bg-white border border-gray-300 p-3 rounded-md shadow-lg" style="min-width: 205px; height: 236px;">
           <img src="{{ category.image.url }}" alt="Computer" class="mb-2 w-full h-4/5 object-cover" style="max-height: 188px;" />
-          <p class="text-lg font-semibold">{{category.title}}</p>
+          <p class="text-lg font-semibold">{{category.name}}</p>
         </div>
           {% endfor %}
 
