MA : add validation in add product module and insert in DB

--- a/templates/header/navbar.html
+++ b/templates/header/navbar.html
@@ -24,10 +24,10 @@
                         <a class="navbar-item" href="#">
                             {{ request.user.vendor }}
                         </a>
-                        <a class="navbar-item" href="{% url '#' %}">
+                        <a class="navbar-item" href="{% url 'core:home' %}">
                             Update Profile
                         </a>
-                        <a class="navbar-item" href="{% url '#' %}">
+                        <a class="navbar-item" href="{% url 'core:home' %}">
                             List Product
                         </a>
                         <hr class="navbar-divider">
