--- a/templates/products/featured_products/featured_products.html
+++ b/templates/products/featured_products/featured_products.html
@@ -2,6 +2,9 @@
 
   <div class="mt-12 grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-12  gap-6 px-6 md:px-16">
     <!-- Left Column -->
+
+
+
     <div class="col-span-12 lg:col-span-4 md:w-full lg:col-span-4 bg-yellow-200 p-6 flex flex-col gap-6 h-auto">
       <h6 class="text-red-500 text-sm text-center">COMPUTER & ACCESSORIES</h6>
       <h1 class="text-2xl md:text-4xl text-center font-semibold">32% Discount</h1>
@@ -23,6 +26,8 @@
       </div>
     </div>
 
+
+
     <div class="col-span-12 md:col-span-12 lg:col-span-8 flex-col">
       <div class="flex flex-col md:flex-row justify-between items-center mb-4">
         <h3 class="text-lg font-semibold">Featured Products</h3>
@@ -35,165 +40,60 @@
         </div>
       </div>
 
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
         <!-- Sample Product Card -->
-        <div class="border border-green-700 p-4 flex flex-col items-center relative bg-white shadow-md">
-          <p class="px-2 py-1 font-bold bg-red-500 text-white self-start">HOT</p>
-          <div class="mb-4 relative">
-            <img src="../assets/Drone.png" alt="Product Name" class="w-full h-auto">
-          </div>
-          <div class="flex space-x-1 mb-2">
-            <!-- Star Rating -->
-            <svg class="w-5 h-5 text-green-700" fill="currentColor" viewBox="0 0 20 20">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.917 5.897h6.211c.969 0 1.372 1.24.588 1.81l-5.028 3.655 1.917 5.897c.3.921-.755 1.688-1.54 1.11l-5.028-3.655-5.028 3.655c-.784.578-1.838-.189-1.54-1.11l1.917-5.897L.33 10.634c-.784-.57-.381-1.81.588-1.81h6.211L9.049 2.927z"></path>
-            </svg>
-          </div>
-          <h4 class="text-sm text-center font-normal">Product Description</h4>
-          <p class="text-green-700 font-semibold">$2,300</p>
+
+
+ {% for product in products %}
+       <div class="group flex w-full max-w-xs flex-col overflow-hidden rounded-lg border border-gray-100 bg-white shadow-md h-[300px]">
+          <a class="relative mx-3 mt-3 flex h-60 overflow-hidden rounded-xl" href="{% url 'product:product-detail' product.id %}">
+        {% with product.media.all|slice:":2" as media_list %}
+            {% if media_list|length > 0 %}
+                <!-- First Image -->
+                <img
+                    class="peer absolute top-0 right-0 h-full w-full object-cover"
+                    src="{{ media_list.0.file.url }}"
+                    alt="product image"
+                />
+            {% endif %}
+            {% if media_list|length > 1 %}
+                <!-- Second Image -->
+                <img
+                    class="peer absolute top-0 -right-96 h-full w-full object-cover transition-all delay-100 duration-1000 hover:right-0 peer-hover:right-0"
+                    src="{{ media_list.1.file.url }}"
+                    alt="product image"
+                />
+            {% endif %}
+        {% endwith %}
+    </a>
+            <div class="mt-4 px-3 pb-3">
+                <a  href="{% url 'product:product-detail' product.id %}">
+                    <h5 class="text-[20px] tracking-tight text-slate-600">{{ product.name }}</h5>
+                </a>
+                <div class="mt-1 mb-3 flex items-center justify-between">
+                    <p>
+
+                        <span class="text-[18px] font-bold text-slate-900">{{ product.price }}</span>
+                        <span class="text-[10px] text-slate-900 line-through">$699</span>
+                    </p>
+                </div>
+
+
+                <a href="#" class="flex items-center justify-center rounded-md bg-[#0B5D51] px-3 py-2 text-center text-sm font-medium text-white hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-4 focus:ring-blue-300">
+                    Add to cart
+                </a>
+            </div>
         </div>
 
-        <div class="border border-green-700 p-4 flex flex-col items-center relative bg-white shadow-md">
-          <p class="px-2 py-1 font-bold bg-red-500 text-white self-start">HOT</p>
-          <div class="mb-4 relative">
-            <img src="../assets/Drone2.png" alt="Product Name" class="w-full h-auto">
-          </div>
-          <div class="flex space-x-1 mb-2">
-            <!-- Star Rating -->
-            <svg class="w-5 h-5 text-green-700" fill="currentColor" viewBox="0 0 20 20">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.917 5.897h6.211c.969 0 1.372 1.24.588 1.81l-5.028 3.655 1.917 5.897c.3.921-.755 1.688-1.54 1.11l-5.028-3.655-5.028 3.655c-.784.578-1.838-.189-1.54-1.11l1.917-5.897L.33 10.634c-.784-.57-.381-1.81.588-1.81h6.211L9.049 2.927z"></path>
-            </svg>
-          </div>
-          <h4 class="text-sm text-center font-normal">Product Description</h4>
-          <p class="text-green-700 font-semibold">$2,300</p>
-        </div>
-        <div class="border border-green-700 p-4 flex flex-col items-center relative bg-white shadow-md">
-          <p class="px-2 py-1 font-bold bg-red-500 text-white self-start">HOT</p>
-          <div class="mb-4 relative">
-            <img src="../assets/Drone2.png" alt="Product Name" class="w-full h-auto">
-          </div>
-          <div class="flex space-x-1 mb-2">
-            <!-- Star Rating -->
-            <svg class="w-5 h-5 text-green-700" fill="currentColor" viewBox="0 0 20 20">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.917 5.897h6.211c.969 0 1.372 1.24.588 1.81l-5.028 3.655 1.917 5.897c.3.921-.755 1.688-1.54 1.11l-5.028-3.655-5.028 3.655c-.784.578-1.838-.189-1.54-1.11l1.917-5.897L.33 10.634c-.784-.57-.381-1.81.588-1.81h6.211L9.049 2.927z"></path>
-            </svg>
-          </div>
-          <h4 class="text-sm text-center font-normal">Product Description</h4>
-          <p class="text-green-700 font-semibold">$2,300</p>
-        </div>
-        <div class="border border-green-700 p-4 flex flex-col items-center relative bg-white shadow-md">
-          <p class="px-2 py-1 font-bold bg-red-500 text-white self-start">HOT</p>
-          <div class="mb-4 relative">
-            <img src="../assets/Drone2.png" alt="Product Name" class="w-full h-auto">
-          </div>
-          <div class="flex space-x-1 mb-2">
-            <!-- Star Rating -->
-            <svg class="w-5 h-5 text-green-700" fill="currentColor" viewBox="0 0 20 20">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.917 5.897h6.211c.969 0 1.372 1.24.588 1.81l-5.028 3.655 1.917 5.897c.3.921-.755 1.688-1.54 1.11l-5.028-3.655-5.028 3.655c-.784.578-1.838-.189-1.54-1.11l1.917-5.897L.33 10.634c-.784-.57-.381-1.81.588-1.81h6.211L9.049 2.927z"></path>
-            </svg>
-          </div>
-          <h4 class="text-sm text-center font-normal">Product Description</h4>
-          <p class="text-green-700 font-semibold">$2,300</p>
-        </div>
-        <div class="border border-green-700 p-4 flex flex-col items-center relative bg-white shadow-md">
-          <p class="px-2 py-1 font-bold bg-red-500 text-white self-start">HOT</p>
-          <div class="mb-4 relative">
-            <img src="../assets/Drone2.png" alt="Product Name" class="w-full h-auto">
-          </div>
-          <div class="flex space-x-1 mb-2">
-            <!-- Star Rating -->
-            <svg class="w-5 h-5 text-green-700" fill="currentColor" viewBox="0 0 20 20">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.917 5.897h6.211c.969 0 1.372 1.24.588 1.81l-5.028 3.655 1.917 5.897c.3.921-.755 1.688-1.54 1.11l-5.028-3.655-5.028 3.655c-.784.578-1.838-.189-1.54-1.11l1.917-5.897L.33 10.634c-.784-.57-.381-1.81.588-1.81h6.211L9.049 2.927z"></path>
-            </svg>
-          </div>
-          <h4 class="text-sm text-center font-normal">Product Description</h4>
-          <p class="text-green-700 font-semibold">$2,300</p>
-        </div>
-        <div class="border border-green-700 p-4 flex flex-col items-center relative bg-white shadow-md">
-          <p class="px-2 py-1 font-bold bg-red-500 text-white self-start">HOT</p>
-          <div class="mb-4 relative">
-            <img src="../assets/Drone2.png" alt="Product Name" class="w-full h-auto">
-          </div>
-          <div class="flex space-x-1 mb-2">
-            <!-- Star Rating -->
-            <svg class="w-5 h-5 text-green-700" fill="currentColor" viewBox="0 0 20 20">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.917 5.897h6.211c.969 0 1.372 1.24.588 1.81l-5.028 3.655 1.917 5.897c.3.921-.755 1.688-1.54 1.11l-5.028-3.655-5.028 3.655c-.784.578-1.838-.189-1.54-1.11l1.917-5.897L.33 10.634c-.784-.57-.381-1.81.588-1.81h6.211L9.049 2.927z"></path>
-            </svg>
-          </div>
-          <h4 class="text-sm text-center font-normal">Product Description</h4>
-          <p class="text-green-700 font-semibold">$2,300</p>
-        </div>
-        <div class="border border-green-700 p-4 flex flex-col items-center relative bg-white shadow-md">
-          <p class="px-2 py-1 font-bold bg-red-500 text-white self-start">HOT</p>
-          <div class="mb-4 relative">
-            <img src="../assets/Drone2.png" alt="Product Name" class="w-full h-auto">
-          </div>
-          <div class="flex space-x-1 mb-2">
-            <!-- Star Rating -->
-            <svg class="w-5 h-5 text-green-700" fill="currentColor" viewBox="0 0 20 20">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.917 5.897h6.211c.969 0 1.372 1.24.588 1.81l-5.028 3.655 1.917 5.897c.3.921-.755 1.688-1.54 1.11l-5.028-3.655-5.028 3.655c-.784.578-1.838-.189-1.54-1.11l1.917-5.897L.33 10.634c-.784-.57-.381-1.81.588-1.81h6.211L9.049 2.927z"></path>
-            </svg>
-          </div>
-          <h4 class="text-sm text-center font-normal">Product Description</h4>
-          <p class="text-green-700 font-semibold">$2,300</p>
-        </div>
-        <div class="border border-green-700 p-4 flex flex-col items-center relative bg-white shadow-md">
-          <p class="px-2 py-1 font-bold bg-red-500 text-white self-start">HOT</p>
-          <div class="mb-4 relative">
-            <img src="../assets/Drone2.png" alt="Product Name" class="w-full h-auto">
-          </div>
-          <div class="flex space-x-1 mb-2">
-            <!-- Star Rating -->
-            <svg class="w-5 h-5 text-green-700" fill="currentColor" viewBox="0 0 20 20">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.917 5.897h6.211c.969 0 1.372 1.24.588 1.81l-5.028 3.655 1.917 5.897c.3.921-.755 1.688-1.54 1.11l-5.028-3.655-5.028 3.655c-.784.578-1.838-.189-1.54-1.11l1.917-5.897L.33 10.634c-.784-.57-.381-1.81.588-1.81h6.211L9.049 2.927z"></path>
-            </svg>
-          </div>
-          <h4 class="text-sm text-center font-normal">Product Description</h4>
-          <p class="text-green-700 font-semibold">$2,300</p>
-        </div>
-        <div class="border border-green-700 p-4 flex flex-col items-center relative bg-white shadow-md">
-          <p class="px-2 py-1 font-bold bg-red-500 text-white self-start">HOT</p>
-          <div class="mb-4 relative">
-            <img src="../assets/Drone2.png" alt="Product Name" class="w-full h-auto">
-          </div>
-          <div class="flex space-x-1 mb-2">
-            <!-- Star Rating -->
-            <svg class="w-5 h-5 text-green-700" fill="currentColor" viewBox="0 0 20 20">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.917 5.897h6.211c.969 0 1.372 1.24.588 1.81l-5.028 3.655 1.917 5.897c.3.921-.755 1.688-1.54 1.11l-5.028-3.655-5.028 3.655c-.784.578-1.838-.189-1.54-1.11l1.917-5.897L.33 10.634c-.784-.57-.381-1.81.588-1.81h6.211L9.049 2.927z"></path>
-            </svg>
-          </div>
-          <h4 class="text-sm text-center font-normal">Product Description</h4>
-          <p class="text-green-700 font-semibold">$2,300</p>
-        </div>
-        <div class="border border-green-700 p-4 flex flex-col items-center relative bg-white shadow-md">
-          <p class="px-2 py-1 font-bold bg-red-500 text-white self-start">HOT</p>
-          <div class="mb-4 relative">
-            <img src="../assets/Drone2.png" alt="Product Name" class="w-full h-auto">
-          </div>
-          <div class="flex space-x-1 mb-2">
-            <!-- Star Rating -->
-            <svg class="w-5 h-5 text-green-700" fill="currentColor" viewBox="0 0 20 20">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.917 5.897h6.211c.969 0 1.372 1.24.588 1.81l-5.028 3.655 1.917 5.897c.3.921-.755 1.688-1.54 1.11l-5.028-3.655-5.028 3.655c-.784.578-1.838-.189-1.54-1.11l1.917-5.897L.33 10.634c-.784-.57-.381-1.81.588-1.81h6.211L9.049 2.927z"></path>
-            </svg>
-          </div>
-          <h4 class="text-sm text-center font-normal">Product Description</h4>
-          <p class="text-green-700 font-semibold">$2,300</p>
-        </div>
-        <div class="border border-green-700 p-4 flex flex-col items-center relative bg-white shadow-md">
-          <p class="px-2 py-1 font-bold bg-red-500 text-white self-start">HOT</p>
-          <div class="mb-4 relative">
-            <img src="../assets/Drone2.png" alt="Product Name" class="w-full h-auto">
-          </div>
-          <div class="flex space-x-1 mb-2">
-            <!-- Star Rating -->
-            <svg class="w-5 h-5 text-green-700" fill="currentColor" viewBox="0 0 20 20">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.917 5.897h6.211c.969 0 1.372 1.24.588 1.81l-5.028 3.655 1.917 5.897c.3.921-.755 1.688-1.54 1.11l-5.028-3.655-5.028 3.655c-.784.578-1.838-.189-1.54-1.11l1.917-5.897L.33 10.634c-.784-.57-.381-1.81.588-1.81h6.211L9.049 2.927z"></path>
-            </svg>
-          </div>
-          <h4 class="text-sm text-center font-normal">Product Description</h4>
-          <p class="text-green-700 font-semibold">$2,300</p>
-        </div>
+
+          {% endfor %}
+
+
+
       </div>
     </div>
   </div>
+
+
 
 
